# Pipeline-Hero-CRM

./: .gitignore  README.md  crm-requirements.md
mypipelinehero/: .dockerignore  .env.example  .gitignore  Makefile  README.md  compose.yaml  conftest.py  manage.py  pyproject.toml
mypipelinehero/apps/catalog/manufacturing/: apps.py  models.py
mypipelinehero/apps/catalog/manufacturing/migrations/: 0001_initial.py
mypipelinehero/apps/catalog/manufacturing/tests/: test_models.py
mypipelinehero/apps/catalog/materials/: apps.py  models.py
mypipelinehero/apps/catalog/materials/tests/: test_models.py
mypipelinehero/apps/catalog/pricing/: apps.py  models.py
mypipelinehero/apps/catalog/products/: apps.py  models.py
mypipelinehero/apps/catalog/services/: apps.py  models.py
mypipelinehero/apps/catalog/suppliers/: apps.py  models.py
mypipelinehero/apps/common/: decimal_precision.py
mypipelinehero/apps/common/services/: __init__.py  exceptions.py
mypipelinehero/apps/common/tenancy/: __init__.py  apps.py  managers.py  middleware.py  models.py
mypipelinehero/apps/common/tests/: test_tenancy_middleware.py  test_tenant_manager_coverage.py
mypipelinehero/apps/operations/locations/: apps.py  models.py
mypipelinehero/apps/platform/accounts/: apps.py  models.py  services.py
mypipelinehero/apps/platform/audit/: apps.py  models.py  services.py
mypipelinehero/apps/platform/console/: admin.py  apps.py  sites.py  views.py
mypipelinehero/apps/platform/organizations/: apps.py  models.py  services.py
mypipelinehero/apps/platform/rbac/: apps.py  capabilities.py  decorators.py  evaluator.py  middleware.py  models.py  role_templates.py  services.py
mypipelinehero/apps/platform/support/: apps.py  context_processors.py  models.py  services.py  urls.py  views.py
mypipelinehero/apps/web/auth_portal/: apps.py  forms.py  services.py  urls.py  views.py
mypipelinehero/apps/web/landing/: apps.py  urls.py  views.py
mypipelinehero/apps/web/tenant_portal/: apps.py  services.py  urls.py  views.py
mypipelinehero/config/: __init__.py  asgi.py  celery.py  urls.py  urls_tenant.py  wsgi.py
mypipelinehero/config/settings/: __init__.py  base.py  dev.py  prod.py  test.py
mypipelinehero/docker/django/: Dockerfile
mypipelinehero/docker/nginx/: Dockerfile
mypipelinehero/docker/nginx/conf.d/: mypipelinehero.conf
mypipelinehero/requirements/: base.txt  dev.txt  prod.txt  test.txt
mypipelinehero/templates/: base.html
mypipelinehero/templates/auth_portal/: pick_organization.html
mypipelinehero/templates/console/: start_impersonation.html
mypipelinehero/templates/landing/: login.html  no_access.html  platform_console_placeholder.html
mypipelinehero/templates/rbac/: 403.html
mypipelinehero/templates/support/: _banner.html
mypipelinehero/templates/tenant_portal/: dashboard.html  handoff_failed.html
(+167 files in other folders)
